--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -42,7 +42,10 @@ cc_library(
     name = 'gentest_runtime',
     srcs = ['src/runner_impl.cpp'],
     hdrs = glob(['include/gentest/*.h'], allow_empty = False),
-    copts = ['-std=c++20', '-DFMT_HEADER_ONLY', '-Iinclude', '-Itests'],
+    copts = ['-std=c++20', '-DFMT_HEADER_ONLY', '-Iinclude', '-Itests'] + select({
+        '@bazel_tools//src/conditions:windows': ['/wd5030'],
+        '//conditions:default': ['-Wno-attributes'],
+    }),
     includes = ['include'],
     linkopts = ['-fuse-ld=bfd'],
     visibility = ['//visibility:public'],
@@ -51,7 +54,10 @@ cc_library(
 cc_library(
     name = 'gentest_main',
     srcs = ['src/gentest_main.cpp'],
-    copts = ['-std=c++20', '-DFMT_HEADER_ONLY', '-Iinclude', '-Itests'],
+    copts = ['-std=c++20', '-DFMT_HEADER_ONLY', '-Iinclude', '-Itests'] + select({
+        '@bazel_tools//src/conditions:windows': ['/wd5030'],
+        '//conditions:default': ['-Wno-attributes'],
+    }),
     linkopts = ['-fuse-ld=bfd'],
     deps = [':gentest_runtime'],
     visibility = ['//visibility:public'],
