codegen: fix release-like flags on MSVC

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -322,19 +322,22 @@ target_compile_features(gentest_codegen PRIVATE cxx_std_20)
 # the host tool fast and avoids Debug-CRT mismatches with prebuilt LLVM/Clang on
 # some platforms.
 option(GENTEST_CODEGEN_FORCE_RELEASE
-    "Build gentest_codegen with release-like flags regardless of CMake build configuration"
+    "Build gentest_codegen with release-like flags even in Debug configs"
     ON)
 if(GENTEST_CODEGEN_FORCE_RELEASE)
-    # Optimization: override common debug defaults (-O0 / /Od).
+    # Optimization: override common debug defaults (-O0 / /Od). For non-Debug
+    # configs CMake already uses optimized flags, so only touch Debug here.
     # Note: tool still inherits sanitizer flags from global CMake settings.
     if(MSVC)
-        target_compile_options(gentest_codegen PRIVATE "$<$<NOT:$<CONFIG:Release>>:/O2>")
+        # Disable MSVC debug runtime checks (/RTC1) to avoid conflicting flags
+        # when forcing optimization.
+        target_compile_options(gentest_codegen PRIVATE "$<$<CONFIG:Debug>:/RTC->" "$<$<CONFIG:Debug>:/O2>")
     else()
-        target_compile_options(gentest_codegen PRIVATE "$<$<NOT:$<CONFIG:Release>>:-O2>")
+        target_compile_options(gentest_codegen PRIVATE "$<$<CONFIG:Debug>:-O2>")
     endif()
 
     # Assertions: default Release defines NDEBUG; do the same here.
-    target_compile_definitions(gentest_codegen PRIVATE "$<$<NOT:$<CONFIG:Release>>:NDEBUG>")
+    target_compile_definitions(gentest_codegen PRIVATE "$<$<CONFIG:Debug>:NDEBUG>")
 endif()
 
 if(WIN32)
